# TomeMaster

./: .gitignore  AGENT_PROTECTION_NOTICE.md  AI_ORCHESTRATION_MANUAL.md  Architecture_Documentation_Pack.md  CLAUDE.md  CORE_ARCHITECTURE.md  Crewai_import_Agent.py  Crewai_import_image.py  DIRECTORIAL_DRAFT.md  Dockerfile.govcloud  GOVERNANCE_PROTOCOL.md  Gemini_history.txt  Govt_Ed_Certification_Analysis.md  HELP.md  Ingestion Engine-Build.py  LICENSE.md  MASTER_DESIGN.md  MASTER_DIRECTIVE.md  Production_layout  Pydance-pylight-research.md  README.md  RESTORE_KNOWLEDGE.bat  RESTORE_WORKSPACE.bat  SIGNAL.txt  SOVEREIGN_GUARDRAILS.md  SOVEREIGN_LEDGER.md  SUPER_RECOVERY.bat  Start_TomeMaster - Shortcut.lnk  Start_TomeMaster.bat  TERMS.md  TomeMaster_Keygen.py  app.py  build_exe.bat  docker-compose.yml  engine_p1.txt  engine_p2.txt  engine_p3.txt  gap_analyzer.py  get_key.py  industrial_audit.py  (+10 more)
.agents/: directives.md
.claude_OLD/: settings.local.json
backend/: .env  .tome_session.json  Dockerfile  api_usage_log.jsonl  audit_gemini-1.5-pro-002.json  audit_gemini-2.1-pro.json  audit_gemini-2.5-pro.json  audit_gemini-3-flash-preview.json  audit_gemini-3.1-pro-preview.json  authorized_portfolio.txt  build_native.py  celery_app.py  check_status.py  debug_ollama.py  desktop_app.py  discovery_sync.py  files.txt  files_clean.txt  last_export_error.txt  last_export_req.txt  list_gemini_models.py  list_models.py  main.py  mcp_server.py  model_list.txt  requirements.txt  run.py  schemas.py  settings.json  sovereign_handshake_audit.py  test_export.py  test_geminis.py  (+5 more)
(+210 files in other folders)
