[project]
name = "tomemaster"
version = "2.0.0"
description = "TomeMaster V2: Locally Sovereign Multi-Agent Manuscript Transcription & Publishing Engine"
authors = [
    {name = "TomeMaster Team"}
]
dependencies = [
    "crewai[tools]>=0.28.8",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pywebview>=5.0",
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
